tests/ucc/bind/good/enum-vs-struct.c
struct c
{
    int a;
};

enum b
{
    c,
};

struct a
{
    enum b c;
};
