tests/ucc/bind/bad/struct-vs-enum.c
struct b
{
    int a;
};

enum b
{
    c,
};
